--- a/public/missions/001.md
+++ b/public/missions/001.md
@@ -1,7 +1,7 @@
 # Mission // #001
 ## Bug-Hunt
 # Goals
-- Stabilize the situation around Evergreen.
+- Go protect those workers!
 - Track the raiders, figure out who they are.
   - Stop their attacks.
 
