New mission info added. Cazeti planet added

--- a/public/missions/001.md
+++ b/public/missions/001.md
@@ -1,12 +1,9 @@
 # Mission // #001
-## Bug-Hunt
+## Serene Harvest
+A refinery union on Cazeti is striking and blocking scab workers sent in from Century. This action is probably legal, but the Convocation have deemed it an act of sabotage. A unidentified ship was deployed to the refinery, and Just Axiom suspects it is a Convocation squad.
+
 # Goals
-- Go protect those workers!
-- Track the raiders, figure out who they are.
-  - Stop their attacks.
-
-# Stakes
-- Time is critical. Not acting will result in Evergreen losing contact with surrounding farmland, crippling any kind of expansion.
-
-# Reserves
-- None at this time.
+- Protect the striking workers at the Husk Corp Refinery on Cazeti
+- Determine the identity and aims of the attackers
+- Secure evidence of their objectives
+  - Especially if it incriminates the Convocation
