Changing title. Mucking with events

--- a/public/events/001.md
+++ b/public/events/001.md
@@ -1,3 +1,3 @@
-# MSMC Transport Carrier // 02.02.5016u
+# Company Transport Carrier // 02.02.5016u
 
 - After having met with Gen. Annalise Sparrow, the newly formed mercenary company accepted the mission to intercept a unidentified ship heading to the refinery.
