--- a/public/missions/002.md
+++ b/public/missions/002.md
@@ -1,11 +1,11 @@
 # Mission // #002
 ## Vigilant Gaze
 
-With the refinery on Cazeti offline, supplies of its high-energy materiel are hot commodities. There is stockpile in Aernia, ready to be manufactured into weapons and propulsion. The Convocation are aiming to secure it. However, there are remours of conflict between the local Aernian government and the Convocation governor, whom they should be cooperating with. If Just Axiom assists in securing the stockpile for Aernia, we could drive a wedge between the Convocation and its client state while also denyin our enemies important resources.
+There is a stockpile of high-energy material in Aernia, ready to be manufactured into weapons and propulsion. With their refinery now offline, the Convocation are aiming to secure it. However, there are remours of conflict between the local Aernian government and the Convocation governor. If Just Axiom assists in securing the stockpile for Aernia, we could drive a wedge between the Convocation and its client state while also denying our enemies important resources.
 
 # Goals
 - Deny the high-energy materials from boarding Convocation transports
 - Win Aernia over from the Convocation
 
 # Stakes
-- If the mission is failed, we'll have shown we are unable to help those states exploited by the Convocation.
+- If the mission fails, we'll have shown we are unable to help those states exploited by the Convocation.
