More mission updates

--- a/public/missions/002.md
+++ b/public/missions/002.md
@@ -1,6 +1,5 @@
 # Mission // #002
-## Vigilant Gaze
-
+## Card Trick
 There is a stockpile of high-energy material in Aernia, ready to be manufactured into weapons and propulsion. With their refinery now offline, the Convocation are aiming to secure it. However, there are remours of conflict between the local Aernian government and the Convocation governor. If Just Axiom assists in securing the stockpile for Aernia, we could drive a wedge between the Convocation and its client state while also denying our enemies important resources.
 
 # Goals
