--- a/public/missions/003.md
+++ b/public/missions/003.md
@@ -1,5 +1,5 @@
-# Mission // #002
-## Vigilant Gaze
+# Mission // #003
+## Split Decision
 
 With the refinery on Cazeti offline, supplies of its high-energy materiel are hot commodities. There is stockpile in Aernia, ready to be manufactured into weapons and propulsion. The Convocation are aiming to secure it. However, there are remours of conflict between the local Aernian government and the Convocation governor, whom they should be cooperating with. If Just Axiom assists in securing the stockpile for Aernia, we could drive a wedge between the Convocation and its client state while also denyin our enemies important resources.
 
