Edited events. Commented out new missions

--- a/public/events/001.md
+++ b/public/events/001.md
@@ -1,6 +1,6 @@
 # Mission Dossier // 02.02.5016u
 
-- After having met with **Gen. Annalise Sparrow**, the newly formed mercenary company accepted the mission to intercept a unidentified ship heading to the refinery.
-- They engaged the attackers and identified them as The Rocky Shores, a known mercenary group
-- They defeated the mercenaries, protected the refinery, and arrested them. The Just Axiom Mercenaries discovered that the intended goal was for the Rocky Shores to destroy the refinery and kill those inside
-- In response to the failure of the Rocky Shores, the Convocation apparently decided that **Kladi Astray** must be brought to Century to face "justice" directly. They are attempting to extradite him back to Century to face trial. https://petralancer.notion.site/Kladi-Astray-Refinery-Union-Rep-80c0c5b3cb544c2eb3be22a6d6965e88
+- After having met with **Gen. Annalise Sparrow**, the newly formed mercenary company accepted the mission to intercept a unidentified ship heading to the refinery
+- They engaged the attackers and discovered they were the mercenary company The Rocky Shores
+- They protected the refinery and arrested several of the Rocky Shores. The Just Axiom Mercenaries discovered that the intended goal was to destroy the refinery and kill those inside
+- In response to the failure of the Rocky Shores, the Convocation apparently decided that **Kladi Astray** must be brought to Century to face "justice" directly. They are attempting to extradite him back to Century to face trial.
