--- a/public/missions/001.md
+++ b/public/missions/001.md
@@ -5,5 +5,5 @@ A refinery union on Cazeti is striking and blocking scab workers sent in from Ce
 # Goals
 - Protect the striking workers at the Husk Corp Refinery on Cazeti
 - Determine the identity and aims of the attackers
-- Secure evidence of their objectives
+- Collect evidence of their objectives
   - Especially if it incriminates the Convocation
