Updated descriptions for hidden missions.

--- a/public/missions/002.md
+++ b/public/missions/002.md
@@ -1,10 +1,11 @@
 # Mission // #002
-## Card Trick
+## Honest Trick
 There is a stockpile of high-energy material in Aernia, ready to be manufactured into weapons and propulsion. With their refinery now offline, the Convocation are aiming to secure it. However, there are remours of conflict between the local Aernian government and the Convocation governor. If Just Axiom assists in securing the stockpile for Aernia, we could drive a wedge between the Convocation and its client state while also denying our enemies important resources.
 
 # Goals
 - Deny the high-energy materials from boarding Convocation transports
-- Win Aernia over from the Convocation
+- Win support for Just Axiom in Aernia
 
 # Stakes
-- If the mission fails, we'll have shown we are unable to help those states exploited by the Convocation.
+- If the mission fails, we'll have shown we are unable to help those states exploited by the Convocation
+- Additionally, the blow dealt by taking the refinery will be lessened
