--- a/public/missions/003.md
+++ b/public/missions/003.md
@@ -1,11 +1,10 @@
 # Mission // #003
-## Split Decision
+## Honest Trick
 
-With the refinery on Cazeti offline, supplies of its high-energy materiel are hot commodities. There is stockpile in Aernia, ready to be manufactured into weapons and propulsion. The Convocation are aiming to secure it. However, there are remours of conflict between the local Aernian government and the Convocation governor, whom they should be cooperating with. If Just Axiom assists in securing the stockpile for Aernia, we could drive a wedge between the Convocation and its client state while also denyin our enemies important resources.
+The Black Daggers are trying to run supplies to Sparri rebels on Century. They’re reaching out to their contacts to see who would be willing to escort their ship from the asteroid field and protect the delivery until it’s safely on the planet. Just Axiom cannot be seen working directly with pirates, but they do support the fight for Sparri autonomy.
 
 # Goals
-- Deny the high-energy materials from boarding Convocation transports
-- Win Aernia over from the Convocation
+- Make sure the supplies reach the Sparri rebels on Century
 
 # Stakes
-- If the mission is failed, we'll have shown we are unable to help those states exploited by the Convocation.
+- Failure could mean exposure for Just Axiom in addition to the Sparri not getting supplies they need to fight the Convocation occupation.
