--- a/public/missions/002.md
+++ b/public/missions/002.md
@@ -1,11 +1,10 @@
 # Mission // #002
 ## Honest Trick
-There is a stockpile of high-energy material in Aernia, ready to be manufactured into weapons and propulsion. With their refinery now offline, the Convocation are aiming to secure it. However, there are remours of conflict between the local Aernian government and the Convocation governor. If Just Axiom assists in securing the stockpile for Aernia, we could drive a wedge between the Convocation and its client state while also denying our enemies important resources.
+
+The Black Dagger are trying to run supplies to Sparri rebels on Century. They need an escort for their ship from the asteroid field to Century. Once landed, they'll need the team to protect the delivery until it’s safely on the planet. 
 
 # Goals
-- Deny the high-energy materials from boarding Convocation transports
-- Win support for Just Axiom in Aernia
+- Make sure the supplies reach the Sparri rebels on Century
 
 # Stakes
-- If the mission fails, we'll have shown we are unable to help those states exploited by the Convocation
-- Additionally, the blow dealt by taking the refinery will be lessened
+- Failure could the Sparri not getting supplies they need to fight the Convocation occupation, collateral damage to The Black Dagger, or bad public exposure for the Just Axiom.
