--- a/public/events/002.md
+++ b/public/events/002.md
@@ -1,3 +1,3 @@
 # Mission Dossier // 02.18.5016u
 
-- 
+- The company was contracted by The Black Dagger to escort their cargo to Century and then on to the Sparri encampment.
