--- a/public/events/002.md
+++ b/public/events/002.md
@@ -1,3 +1,14 @@
 # Mission Dossier // 02.18.5016u
 
-- The company was contracted by The Black Dagger to escort their cargo to Century and then on to the Sparri encampment.
+* The company was contracted by The Black Dagger to escort their cargo to Century and then on to the Sparri encampment.
+
+## Notes
+
+* Mountain has earned the attention of an apparent HORUS sect operating in Petra. They've offered to create a distraction in return for the favour she has promised them
+* Aedyn, a fresh-faced university student with dreams of being a Lancer, is accompanying the team
+* 
+
+## Reserves
+
+* Temporary Shield Generator
+* 
