--- a/public/missions/002.md
+++ b/public/missions/002.md
@@ -7,4 +7,4 @@ The Black Dagger are trying to run supplies to Sparri rebels on Century. They ne
 - Make sure the supplies reach the Sparri rebels on Century
 
 # Stakes
-- Failure could the Sparri not getting supplies they need to fight the Convocation occupation, collateral damage to The Black Dagger, or bad public exposure for the Just Axiom.
+- Failure could mean the Sparri not getting supplies they need to fight the Convocation occupation, collateral damage to The Black Dagger, or bad public exposure for the Just Axiom.
