--- a/public/events/003.md
+++ b/public/events/003.md
@@ -1,3 +1,18 @@
 # Mission Dossier // 02.18.5016u
 
-- 
+* The company was contracted by The Black Dagger to escort their cargo to Century and then on to the Sparri encampment.
+
+# Notes //
+
+* Mountain has earned the attention of an apparent HORUS sect operating in Petra. They've offered to create a distraction in return for the favour she has promised them
+* Aedyn, a fresh-faced university student with dreams of being a Lancer, is accompanying the team
+* Smith-Shimano Corp sent a high-tech stealth shuttle and mech squad to try to take the shipment. The team captured two SSC operatives (_Benediction Lily_ and _Trifling Icon_) who were then sold back to SSC by Captain Shire
+
+# Reserves //
+
+* Temporary Shield Generator
+* 1 HORUS-backed distraction
+* An owed favour from Kladi Astray and their union
+* An owed favour from The Black Dagger for netting them the extra money from the ransom of the SSC operatives
+* +2 Repairs Stock
+* 1 Core Battery
