Mission write-up

--- a/public/events/003.md
+++ b/public/events/003.md
@@ -1,18 +1,15 @@
-# Mission Dossier // 02.18.5016u
-
-* The company was contracted by The Black Dagger to escort their cargo to Century and then on to the Sparri encampment.
+# Mission Dossier // 04.15.5016u
 
 # Notes //
 
-* Mountain has earned the attention of an apparent HORUS sect operating in Petra. They've offered to create a distraction in return for the favour she has promised them
-* Aedyn, a fresh-faced university student with dreams of being a Lancer, is accompanying the team
-* Smith-Shimano Corp sent a high-tech stealth shuttle and mech squad to try to take the shipment. The team captured two SSC operatives (_Benediction Lily_ and _Trifling Icon_) who were then sold back to SSC by Captain Shire
+* The team will rendezvous with other JA forces at a muster point outside the city. That camp will have their new equipment as well as access to whatever they need in terms of supplies
+* The first target will be the fusion power plant, located outside the fortified core of the city. The goal is to take it offline in order to soften up defenses for the main attack
+* During the main attack, the company will be in charge of securing a residential block so its workers can be evacuated
 
 # Reserves //
 
-* Temporary Shield Generator
-* 1 HORUS-backed distraction
 * An owed favour from Kladi Astray and their union
 * An owed favour from The Black Dagger for netting them the extra money from the ransom of the SSC operatives
-* +2 Repairs Stock
-* 1 Core Battery
+* Sparri connections, especially with the fired up youths you rescued, but with the clans in general
+* (Lapis only) 1 melee attack reroll
+* (Lapis only) +1 accuracy on MAIN melee attacks for 1 encounter
