--- a/public/missions/003.md
+++ b/public/missions/003.md
@@ -1,10 +1,10 @@
 # Mission // #002
-## Honest Trick
+## Quake Elixir
 
-The Black Dagger are trying to run supplies to Sparri rebels on Century. They need an escort for their ship from the asteroid field to Century. Once landed, they'll need the team to protect the delivery until it’s safely on the planet. 
+In response to a distress call, the company has been tasked by Just Axiom command to take part in the liberation of Whiteriver AKA Development District 5
 
 # Goals
-- Make sure the supplies reach the Sparri rebels on Century
+- Liberate the workers of the city from the cruel oppression they're facing while weakening the Convocation's industrial capacity.
 
 # Stakes
-- Failure could mean the Sparri not getting supplies they need to fight the Convocation occupation, collateral damage to The Black Dagger, or bad public exposure for the Just Axiom.
+- There are a lot of Just Axiom forces concentrated here and it represents a new theatre in the war opening up. A defeat here would be incredibly costly to the whole of the Just Axiom.
